# RayTracer

./: .gitignore  CMakeLists.txt  ImageBitmap.h  Scene.cpp  Scene.h  SynchronizedQueue.h  TexImage.h  cl_kernels.c  cl_kernels.cl  config.h  image_bitmap.h  main.cpp  opencl_executor.cpp  opencl_executor.h  ray_tracer.cpp  ray_tracer.h  ray_tracer_cl.cpp  ray_tracer_cl.h  scene.cpp  scene.h  scene_exporter.py  synchronized_queue.h  tex_image.h
